codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/invalid_endian.fail.stderr
error: invalid endian
 --> tests/codama_attribute/node_directive/type_nodes/number_type_node/invalid_endian.fail.rs:3:41
  |
3 | #[codama(node(number_type(u32, endian = invalid)))]
  |                                         ^^^^^^^
