codama-macros/tests/codama_attribute/node_directive/type_nodes/number_type_node/invalid_endian.fail.rs
use codama::codama;

#[codama(node(number_type(u32, endian = invalid)))]
pub struct Test;

fn main() {}
